[project]
name = "glide-analyst"
version = "0.1.0"

authors = [
  {name = "MarieSPIT", email = "marie.sptoni@protonmail.com"},
]
description = "Web app to import, process and visualize flight traces from GPS data."
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest >=7"]
dev = [
    "ruff",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88

